{
    "name": "TouchScreenAction",
    "maps": [
        {
            "name": "TouchScreen",
            "id": "00d87b52-73a2-4c7e-95e1-65f2413527b3",
            "actions": [
                {
                    "name": "PressScreen",
                    "type": "Button",
                    "id": "89ec29be-b7ca-4f69-959b-9b9f46d39426",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "Value",
                    "id": "13c4be5c-04b7-4904-b2fd-5c37ec2717a9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "b0d8a886-2f60-498d-8cbb-924b66d8b022",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9d25a0f-fd78-4cbb-8542-ef66a4afa504",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PressScreen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ee6fda3-b1d2-4c8d-b159-9d5e8737f03a",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ac6755b3-2c85-40e8-b481-0188758ee481",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}